tests/expected_invalid_unknown_type.diag.out
<input>:3:8: error: unknown type 'DoesNotExist' in record field
        x: DoesNotExist,
           ^^^^^^^^^^^^
